# skill

./: .geminiignore  .gitignore  .mcp.json  AGENT.md  AGENTS.md  CLAUDE.md  CLAUDE_CODE_CODEX_SHARED_RUST_CORE_PLAN.md  CONCURRENCY_BOTTLENECK_PLAN.md  Cargo.toml  GEMINI.md  README.md  RTK.md  SKILL_REDUCTION_CHECKLIST.md  SYSTEM_SUBTRACTION_REVIEW_CHECKLIST.md  audit_report.md  claude_injection.md  implementation_plan.md  index.js  omc_checklist.md  puppet-DtkUwgDf.js  pytest.ini  runtime_execution_checklist.md  rust_checklist.md  rust_next_phase_checklist.md  rust_next_phase_stage_closeout.md  skill_reduced.md
.cargo/: config.toml
.claude/: CLAUDE.md  settings.json
.codex/: README.md  config.toml  hooks.json  host_entrypoints_sync_manifest.json
.cursor/: config.toml  hooks.json
.githooks/: post-commit  pre-commit
.rtk/: filters.toml
aionrs_fusion_docs/: codex_dual_entry_checklist.md  codex_dual_entry_next_phase_checklist.md  codex_dual_entry_outline.md  codex_dual_entry_rust_checklist.md
codex-aggregator/: Cargo.toml  docker-compose.yml  extract_tokens.sh  health_monitor.py
codex-aggregator/dashboard/: Dockerfile  server.py
codex-aggregator/dashboard/static/: index.html
codex_agno_runtime/: __init__.py
docs/: README.md  claude_entrypoint_maintenance.md  closeout_enforcement.md  codex_hot_log_storage_split_proposal.md  deerflow2_runtime_benchmark.md  framework_operator_primer.md  framework_profile_contract.md  git_hygiene.md  harness_architecture.md  host_adapter_contract.md  host_adapter_contracts.md  rfv_loop_harness.md  router_rs_hotspot_refactor_plan.md  runtime_compaction_contract.md  runtime_observability_contract.md  runtime_plugin_contract.md  runtime_sandbox_contract.md  rust_codex_only_execution_plan.md  rust_contracts.md  skill_runtime_route_refactor_plan.md  skill_system_subtraction_behavior_review.md  skill_system_subtraction_execution_plan.md  task_state_unified_resolve.md  upgrade_compatibility_matrix.md
evals/: SCHEMA.json
framework_runtime/: __init__.py
memory/: CLAUDE_MEMORY.md  MEMORY.md  MEMORY_AUTO.md  decisions.md  lessons.md  preferences.md  runbooks.md
openai_proxy/: config.yaml  start.sh  start_anthropic_bridge.sh
rust_tools/: Cargo.toml
rust_tools/anthropic_openai_bridge_rs/: Cargo.toml  README.md
rust_tools/anthropic_openai_bridge_rs/src/: main.rs
rust_tools/anthropic_openai_bridge_rs/tests/: pressure.rs
rust_tools/financial_data_rs/: Cargo.toml
rust_tools/financial_data_rs/src/: main.rs
rust_tools/gh_source_gate_rs/: Cargo.toml
rust_tools/gh_source_gate_rs/src/: main.rs
rust_tools/image_gen_rs/: Cargo.toml
rust_tools/image_gen_rs/src/: main.rs
rust_tools/pptx_tool_rs/: Cargo.toml
rust_tools/pptx_tool_rs/src/: main.rs
rust_tools/screenshot_rs/: Cargo.toml
rust_tools/screenshot_rs/src/: main.rs
scripts/: __init__.py  analyze_routing.py  audit_codex_storage.py  audit_evolution.py  build_framework_surface_policy.py  build_skill_approval_policy.py  build_skill_loadouts.py  build_skill_shadow_map.py  build_skill_tiers.py  check_skills.py  claude_hook_audit.py  claude_hook_automation.py  claude_memory_bridge.py  claude_statusline.py  clean-rust-targets.sh  codex_hook_bridge.py  codex_omx_hook_bridge.py  consolidate_memory.py  cursor-bootstrap-framework.sh  default_bootstrap.py  evaluate_routing.py  evolution_engine.py  evolution_server.py  framework_bridge.py  framework_hook_bridge.py  git_safety.py  (+37 more)
scripts/autoresearch-rs/: Cargo.toml
scripts/autoresearch-rs/src/: main.rs
scripts/autoresearch-rs/templates/: bootstrap-brief.md  experiments-readme.md  hypothesis-card.md  novelty-gate.md  reflection-template.md  research-log.md  run-record-template.md
scripts/autoresearch-rs/tests/: cli.rs
scripts/evolution-rs/: Cargo.toml  README.md
scripts/evolution-rs/src/: main.rs
scripts/router-rs/: Cargo.toml  run_router_rs.sh
scripts/router-rs/artifacts/session_supervisor/: state.json
scripts/router-rs/src/: atomic_write.rs  autopilot_goal.rs  background_state.rs  browser_mcp.rs  claude_hooks.rs  cli_modes.rs  closeout_enforcement.rs  codex_hooks.rs  cursor_hooks.rs  eval_route.rs  execution_contract.rs  formal_toolchain.rs  framework_host_targets.rs  framework_maint.rs  framework_mcp.rs  framework_profile.rs  framework_runtime.rs  harness_context_signals.rs  harness_contract.rs  harness_operator_nudges.rs  hook_common.rs  hook_observation_rules.rs  hook_policy.rs  hook_posttool_normalize.rs  host_entrypoint_sync.rs  host_integration.rs  integration_test_prelude.rs  lane_normalize.rs  main.rs  main_tests.rs  paper_adversarial_hook.rs  path_guard.rs  registry_review_gate.rs  review_gate.rs  review_gate_engine.rs  review_routing_signals.rs  rfv_loop.rs  route.rs  router_env_flags.rs  router_rs_observation.rs  (+13 more)
scripts/router-rs/src/browser_mcp/: frag_01_through_types.rs  frag_impl_browser_runtime.rs  frag_impl_cdp.rs  frag_rest.rs  mod.rs  tests.rs
scripts/router-rs/src/cli/: args.inc  args.rs  args_body.txt  args_prefix.txt  bg_prefix.txt  common.inc  common.rs  common_body.txt  dispatch.rs  dispatch_body.txt  live_runtime_body.txt  mod.rs  parallel_chunk.txt  runtime_ops.inc  runtime_ops.rs  stdio_body.txt  trace_metadata_body.txt
scripts/router-rs/src/cursor_hooks/: dispatch.rs  frag_01_continuity_intent.rs  frag_02_gate_event.rs  frag_03_paths_terminal_merge_lock_persist.rs  frag_04_review_gate_runtime.rs  frag_05_handlers_core.rs  frag_06_session_terminal_kill.rs  mod.rs  repo_root.rs  stdin.rs  tests.rs
scripts/router-rs/src/framework_runtime/: alias.rs  constants.rs  continuity_digest.rs  framework_doctor.rs  json_io.rs  json_value.rs  mod.rs  prompt_compression.rs  repo_roots.rs  runtime_view.rs  session_artifacts.rs  statusline.rs  types.rs
scripts/router-rs/src/route/: aliases.rs  constants.rs  eval.rs  gate_hints.rs  metadata_tests.rs  mod.rs  nl_route_adjustments.rs  policy.rs  records.rs  routing.rs  scoring.rs  signals.rs  skill_record.rs  text.rs  types.rs
scripts/skill-compiler-rs/: Cargo.toml
scripts/skill-compiler-rs/src/: host_platforms.rs  lib.rs  main.rs
(+997 files in other folders)
