[package]
name = "skill-rust-test-harness"
version = "0.1.0"
edition = "2021"

[dependencies]

[dev-dependencies]
which = "8"
regex = "1.11"
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = "1.0"
serde_yaml = "0.9"
skill_compiler = { package = "skill-compiler-rs", path = "scripts/skill-compiler-rs" }
tempfile = "3.15"
