[package]
name = "anthropic_openai_bridge_rs"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
axum = "0.7.9"
bytes = "1.10.1"
clap = { version = "4.5.38", features = ["derive", "env"] }
futures-util = "0.3.31"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["macros", "net", "rt-multi-thread", "sync"] }
tokio-stream = "0.1.17"
