[package]
name = "gh_source_gate_rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gh-source-gate"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.15"
