[package]
name = "pptx_tool_rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ppt"
path = "src/bin/ppt.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.1"
font8x8 = "0.3"
image = "0.25"
regex = "1.11"
roxmltree = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.15"
zip = "2.2"
