[package]
name = "autoresearch-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.40", default-features = false, features = ["clock", "std", "serde"] }
clap = { version = "4.5.38", features = ["derive"] }
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
uuid = { version = "1.16.0", features = ["v4"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true
