[package]
name = "evolution-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
rayon = "1.5"
memmap2 = "0.5"
sha2 = "0.10"
hex = "0.4"
fs2 = "0.4"
