[package]
name = "router-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.40", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5.38", features = ["derive"] }
regex = "1.11.1"
rayon = "1.10.0"
reqwest = { version = "0.12.15", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
tungstenite = "0.24.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true
